--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Hello Fahad</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, possimus doloribus. Hic iusto, sapiente tempore accusantium corrupti ipsa asperiores dignissimos!</p>
 </body>
 </html>
